--- a/admin.html
+++ b/admin.html
@@ -37,6 +37,12 @@
           <li class="nav-item sidelist">
             <a class="nav-link text-secondary" href="#">
               <span class="fas fa-book text-secondary">&nbsp;</span>
+              Edit Profil
+            </a>
+          </li>
+          <li class="nav-item sidelist">
+            <a class="nav-link text-secondary" href="#">
+              <span class="fas fa-book text-secondary">&nbsp;</span>
               Materi
             </a>
           </li>
