pembaruan list animation and edit profil link

--- a/admin.html
+++ b/admin.html
@@ -36,7 +36,7 @@
         <ul class="nav flex-column block">
           <li class="nav-item sidelist">
             <a class="nav-link text-secondary" href="#">
-              <span class="fas fa-book text-secondary">&nbsp;</span>
+              <span class="fas fa-edit text-secondary">&nbsp;</span>
               Edit Profil
             </a>
           </li>
@@ -83,61 +83,61 @@
           <section class="col-md-8 col-sm-8">
             <div>
               <div class="book-list border-left border-primary mb-2 bg-white rounded text-dark px-3 py-3">
-                <div>
+                <div class="konten">
                   <h5>Bapak Elang</h5>
                   <small class="text-primary">12 RPL 1</small>
                 </div>
               </div>
               <div class="book-list border-left border-primary mb-2 bg-white rounded text-dark px-3 py-3">
-                <div>
+                <div class="konten">
                   <h5>Bapak Elang</h5>
                   <small class="text-primary">12 RPL 1</small>
                 </div>
               </div>
               <div class="book-list border-left border-primary mb-2 bg-white rounded text-dark px-3 py-3">
-                <div>
+                <div class="konten">
                   <h5>Bapak Elang</h5>
                   <small class="text-primary">12 RPL 1</small>
                 </div>
               </div>
               <div class="book-list border-left border-primary mb-2 bg-white rounded text-dark px-3 py-3">
-                <div>
+                <div class="konten">
                   <h5>Bapak Elang</h5>
                   <small class="text-primary">12 RPL 1</small>
                 </div>
               </div>
               <div class="book-list border-left border-primary mb-2 bg-white rounded text-dark px-3 py-3">
-                <div>
+                <div class="konten">
                   <h5>Bapak Elang</h5>
                   <small class="text-primary">12 RPL 1</small>
                 </div>
               </div>
               <div class="book-list border-left border-primary mb-2 bg-white rounded text-dark px-3 py-3">
-                <div>
+                <div class="konten">
                   <h5>Bapak Elang</h5>
                   <small class="text-primary">12 RPL 1</small>
                 </div>
               </div>
               <div class="book-list border-left border-primary mb-2 bg-white rounded text-dark px-3 py-3">
-                <div>
+                <div class="konten">
                   <h5>Bapak Elang</h5>
                   <small class="text-primary">12 RPL 1</small>
                 </div>
               </div>
               <div class="book-list border-left border-primary mb-2 bg-white rounded text-dark px-3 py-3">
-                <div>
+                <div class="konten">
                   <h5>Bapak Elang</h5>
                   <small class="text-primary">12 RPL 1</small>
                 </div>
               </div>
               <div class="book-list border-left border-primary mb-2 bg-white rounded text-dark px-3 py-3">
-                <div>
+                <div class="konten">
                   <h5>Bapak Elang</h5>
                   <small class="text-primary">12 RPL 1</small>
                 </div>
               </div>
               <div class="book-list border-left border-primary mb-2 bg-white rounded text-dark px-3 py-3">
-                <div>
+                <div class="konten">
                   <h5>Bapak Elang</h5>
                   <small class="text-primary">12 RPL 1</small>
                 </div>
