--- a/tugas.html
+++ b/tugas.html
@@ -73,7 +73,7 @@
         <button class="navbar-toggler d-md-none bg-white collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
           <img width="15px" height="auto" src="images/png/next-1.png">
         </button>
-        <h3 class="h2 ml-3 d-none d-sm-block d-md-none d-md-block">Materi</h3>
+        <h3 class="h2 ml-3 d-none d-sm-block d-md-none d-md-block">Tugas</h3>
         <div class="btn-toolbar mb-2 mb-md-0">
           <input type="cari" placeholder="Cari" class="mr-3 px-3 border border-secondary rounded-pill" name="">
         </div>
