--- a/guru/tugas.html
+++ b/guru/tugas.html
@@ -1,19 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
+  <head> 
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/custom.css">
+    <link rel="stylesheet" type="text/css" href="../css/custom.css">
     <title>Guru</title>
 
     <!-- reference your copy Font Awesome here (from our CDN or by hosting yourself) -->
-    <link href="fontawesome/css/fontawesome.css" rel="stylesheet">
-    <link href="fontawesome/css/brands.css" rel="stylesheet">
-    <link href="fontawesome/css/solid.css" rel="stylesheet">
+    <link href="../fontawesome/css/fontawesome.css" rel="stylesheet">
+    <link href="../fontawesome/css/brands.css" rel="stylesheet">
+    <link href="../fontawesome/css/solid.css" rel="stylesheet">
   </head>
  
   <body>
@@ -73,7 +73,7 @@
         <button class="navbar-toggler d-md-none bg-white collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
           <img width="15px" height="auto" src="images/png/next-1.png">
         </button>
-        <h3 class="h2 ml-3 d-none d-sm-block d-md-none d-md-block">Materi</h3>
+        <h3 class="h2 ml-3 d-none d-sm-block d-md-none d-md-block">Tugas</h3>
         <div class="btn-toolbar mb-2 mb-md-0">
           <input type="cari" placeholder="Cari" class="mr-3 px-3 border border-secondary rounded-pill" name="">
         </div>
@@ -173,7 +173,14 @@
                   <p class="text-dark">Pengunggah: Joko Susanoo</p>
                 </div>
                 <div>
-                  <button class="btn btn-sm btn-primary">Unduh Materi</button>
+                    <div class="row">
+                        <div class="col">
+                            <a href="cek-tugas.html"><button class="btn btn-sm btn-success container-fluid">Cek Tugas</button></a>
+                        </div>
+                        <div class="col">
+                            <button class="btn btn-sm btn-primary container-fluid">Download Tugas</button>
+                        </div>
+                    </div>
                 </div>
               </div>
             </div>
