edit edit profil

--- a/guru/edit-profil.html
+++ b/guru/edit-profil.html
@@ -84,55 +84,73 @@
           <a href="tugas.html"><button class="btn btn-secondary">X</button></a>
         </div>
         <div class="container-fluid">
-            <h5>Bahasa Joko UI</h5>
-            <small>12 RPL 1</small><br/>
-            <small class="text-primary">69 April 2020</small><br/>
-            <small>Kode Tugas: 69697387</small>
+            <h3>Edit Profil</h3>
         </div>
         <div class="container-fluid pt-5">
-            <table id="example" class="table table-striped table-bordered" style="width:100%">
-                <thead>
-                    <tr>
-                        <th>No</th>
-                        <th>Nama</th>
-                        <th>Jawaban</th>
-                        <th>Nilai</th>
-                        <th>Aksi</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Joko UI</td>
-                        <td><a href="#">Jawaban</a></td>
-                        <td>14</td>
-                        <td><button class="btn btn-primary">Edit Nilai</button></td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Joko UI</td>
-                        <td><a href="#">Jawaban</a></td>
-                        <td>14</td>
-                        <td><button class="btn btn-primary">Edit Nilai</button></td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Joko UI</td>
-                        <td><a href="#">Jawaban</a></td>
-                        <td>14</td>
-                        <td><button class="btn btn-primary">Edit Nilai</button></td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <th>No</th>
-                        <th>Nama</th>
-                        <th>Jawaban</th>
-                        <th>Nilai</th>
-                        <th>Aksi</th>
-                    </tr>
-                </tfoot>
-            </table>
+            <div class="container-fluid row">
+                <div class="col-md pb-5">
+                    <div class="container">
+                        <h5>NIP: 69696969</h5>
+                        <h5>Nama: Joko UI</h5>
+                        <h5>Status: <span class="bg-success py-1 px-3 text-light rounded-pill">Aktif</span></h5>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="container" align="center">
+                        <div class="card h-50 w-50" style="width: 18rem;">
+                            <img src="https://www.superprof.co.id/gambar/guru/rumah-guru-saya-adalah-guru-privat-gambar-lulusan-pendidikan-seni-rupa-upi-bandung-saya-sudah-berpengalaman-mengajar-privat-gambar-lebih-dari.jpg" class="card-img-top" alt="Gambar Saya">
+                            <div class="card-body">
+                                <button class="btn btn-danger">Batal</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container-fluid pt-5">
+                <table id="example" class="table table-striped table-bordered" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th>No</th>
+                            <th>Nama</th>
+                            <th>Jawaban</th>
+                            <th>Nilai</th>
+                            <th>Aksi</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Joko UI</td>
+                            <td><a href="#">Jawaban</a></td>
+                            <td>14</td>
+                            <td><button class="btn btn-primary">Edit Nilai</button></td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Joko UI</td>
+                            <td><a href="#">Jawaban</a></td>
+                            <td>14</td>
+                            <td><button class="btn btn-primary">Edit Nilai</button></td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Joko UI</td>
+                            <td><a href="#">Jawaban</a></td>
+                            <td>14</td>
+                            <td><button class="btn btn-primary">Edit Nilai</button></td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <th>No</th>
+                            <th>Nama</th>
+                            <th>Jawaban</th>
+                            <th>Nilai</th>
+                            <th>Aksi</th>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
         </div>
       </div>
       </main>
