--- a/guru/tugas.html
+++ b/guru/tugas.html
@@ -21,7 +21,7 @@
   <div class="row">
     <nav id="sidebarMenu" class="sticky-top pt-0 col-md-3 col-lg-2 vh-100 d-md-block bg-white sidebar collapse">
       <button class="mt-3 navbar-toggler d-md-none bg-white collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-          <img width="15px" height="auto" src="images/png/back.png">
+          <img width="15px" height="auto" src="../images/png/back.png">
         </button>
       <div class="mt-3">
         <center>
@@ -71,7 +71,7 @@
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
         <button class="navbar-toggler d-md-none bg-white collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-          <img width="15px" height="auto" src="images/png/next-1.png">
+          <img width="15px" height="auto" src="../images/png/next-1.png">
         </button>
         <h3 class="h2 ml-3 d-none d-sm-block d-md-none d-md-block">Tugas</h3>
         <div class="btn-toolbar mb-2 mb-md-0">
