--- a/guru/upload-materi.html
+++ b/guru/upload-materi.html
@@ -73,81 +73,56 @@
         <button class="navbar-toggler d-md-none bg-white collapsed" type="button" data-toggle="collapse" data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
           <img width="15px" height="auto" src="../images/png/next-1.png">
         </button>
-        <h3 class="h2 ml-3 d-none d-sm-block d-md-none d-md-block">Cek Tugas</h3>
+        <h3 class="h2 ml-3 d-none d-sm-block d-md-none d-md-block">Upload Materi atau Tugas</h3>
         <div class="btn-toolbar mb-2 mb-md-0">
           <input type="cari" placeholder="Cari" class="mr-3 px-3 border border-secondary rounded-pill" name="">
         </div>
       </div>
 
       <div class="px-4 py-4 card bg-white">
-        <div class="container-fluid">
-            <h3>Edit Profil</h3>
-        </div>
-        <div class="container-fluid pt-5">
-            <div class="container-fluid row pb-2">
+        <div class="container-fluid pt-4">
+            <div class="container-fluid row">
                 <div class="col-md pb-5">
                     <div class="container">
-                        <h5>NIP: 69696969</h5>
-                        <h5>Nama: Joko UI</h5>
-                        <h5>Status: <span class="bg-success py-1 px-3 text-light rounded-pill">Aktif</span></h5>
+                        <label>Pilih Kelas</label>
+                        <select class="form-control" name="">
+                            <option>10 RPL</option>
+                            <option>11 RPL</option>
+                            <option>12 RPL</option>
+                        </select><br/>
+                        <label>Pilih Pelajaran</label>
+                        <select class="form-control" name="">
+                            <option>PKN</option>
+                            <option>IPS</option>
+                            <option>KIMIA</option>
+                        </select><br/>
+                        <label>Deskripsi</label>
+                        <textarea name="" class="form-control"></textarea>
+                        <div class="row pt-5">
+                            <div class="col">
+                                <button class="btn btn-primary text-light container-fluid">Upload Materi</button>
+                            </div>
+                            <div class="col">
+                                <button class="btn btn-warning text-light container-fluid">Upload Materi</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md">
                     <div class="container" align="center">
                         <div class="card h-50 w-50" style="width: 18rem;">
-                            <img src="https://www.superprof.co.id/gambar/guru/rumah-guru-saya-adalah-guru-privat-gambar-lulusan-pendidikan-seni-rupa-upi-bandung-saya-sudah-berpengalaman-mengajar-privat-gambar-lebih-dari.jpg" class="card-img-top" alt="Gambar Saya">
+                            <div class="py-2">
+                                <h5>Pilih File</h5>
+                            </div>
+                            <div class="upload-btn-wrapper-cstm py-4">
+                                <button class="btn-cstm">Unggah File</button>
+                                <input type="file" name="myfile" />
+                              </div>
                             <div class="card-body">
-                                <button class="btn btn-primary container-fluid">Ubah Foto</button>
+                                <button class="btn container-fluid btn-danger">Batal</button>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="container-fluid pt-2">
-                <div class="bg-light rounded">
-                    <table id="example" class="table table-striped table-bordered py-2 px-2" style="width:100%">
-                        <thead>
-                            <tr>
-                                <th>No</th>
-                                <th>Nama</th>
-                                <th>Jawaban</th>
-                                <th>Nilai</th>
-                                <th>Aksi</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>Joko UI</td>
-                                <td><a href="#">Jawaban</a></td>
-                                <td>14</td>
-                                <td><button class="btn btn-primary">Edit Nilai</button></td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>Joko UI</td>
-                                <td><a href="#">Jawaban</a></td>
-                                <td>14</td>
-                                <td><button class="btn btn-primary">Edit Nilai</button></td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
-                                <td>Joko UI</td>
-                                <td><a href="#">Jawaban</a></td>
-                                <td>14</td>
-                                <td><button class="btn btn-primary">Edit Nilai</button></td>
-                            </tr>
-                        </tbody>
-                        <tfoot>
-                            <tr>
-                                <th>No</th>
-                                <th>Nama</th>
-                                <th>Jawaban</th>
-                                <th>Nilai</th>
-                                <th>Aksi</th>
-                            </tr>
-                        </tfoot>
-                    </table>
                 </div>
             </div>
         </div>
